--- a/PG/8_error_dithering/8_error_dithering/MainWindow.xaml
+++ b/PG/8_error_dithering/8_error_dithering/MainWindow.xaml
@@ -5,16 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_8_error_dithering"
         mc:Ignorable="d"
-        Title="Image Dithering" Height="530.948" Width="1149.658">
+        Title="Image Dithering" Height="481.948" Width="1149.658">
     <Grid>
         <Image Name="imageOriginal" HorizontalAlignment="Left" Height="185" Margin="50,30,0,0" VerticalAlignment="Top" Width="210"/>
-        <Button Content="Open File" Click="Open_Click" HorizontalAlignment="Left" Margin="999,30,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="openBtn" Content="Open File" Click="Open_Click" HorizontalAlignment="Left" Margin="999,30,0,0" VerticalAlignment="Top" Width="75"/>
         <Image Name="image2" HorizontalAlignment="Left" Height="185" Margin="279,30,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image3" HorizontalAlignment="Left" Height="185" Margin="518,30,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image4" HorizontalAlignment="Left" Height="185" Margin="743,30,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image5" HorizontalAlignment="Left" Height="185" Margin="50,253,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image6" HorizontalAlignment="Left" Height="185" Margin="279,253,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image7" HorizontalAlignment="Left" Height="185" Margin="518,253,0,0" VerticalAlignment="Top" Width="210"/>
-        <Image Name="image8" HorizontalAlignment="Left" Height="185" Margin="743,253,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image3" HorizontalAlignment="Left" Height="185" Margin="508,30,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image4" HorizontalAlignment="Left" Height="185" Margin="732,30,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image5" HorizontalAlignment="Left" Height="185" Margin="50,241,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image6" HorizontalAlignment="Left" Height="185" Margin="279,241,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image7" HorizontalAlignment="Left" Height="185" Margin="508,241,0,0" VerticalAlignment="Top" Width="210"/>
+        <Image Name="image8" HorizontalAlignment="Left" Height="185" Margin="732,241,0,0" VerticalAlignment="Top" Width="210"/>
+        <Label Name="label1" Content="Floyd-Steinberg" HorizontalAlignment="Left" Margin="108,215,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+        <Label Name="label2" Content="Sierra" HorizontalAlignment="Left" Margin="366,215,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+        <Label Name="label3" Content="Jarvis, Judice, Ninke" HorizontalAlignment="Left" Margin="560,215,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+        <Label Name="label4" Content="Stucki" HorizontalAlignment="Left" Margin="820,215,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+        <ProgressBar Name="progressBar" HorizontalAlignment="Left" Height="29" Margin="326,220,0,0" VerticalAlignment="Top" Width="401" Visibility="Hidden" />
+
     </Grid>
 </Window>
