--- a/INFS/style.css
+++ b/INFS/style.css
@@ -4,17 +4,22 @@ body {
 }
 
 header {
-    padding-bottom: 2%;
+    padding-bottom: 40px;
 }
 
-header, main{
+header, main, .footer-content{
     width: 62%;
     margin: 0 auto;
 }
 
 footer{
+    color: #ffffff;
     background-color: #222222;
     width: 100%;
+}
+
+img {
+    object-fit: cover;
 }
 
 a {
@@ -41,12 +46,35 @@ time{
     font-weight: 500;
 }
 
+.bottom-padding{
+    padding-bottom: 40px;
+}
+
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+
+.nowrap{
+    flex-wrap: nowrap;
+}
+
 .about-post p, .about-post time{
     display: inline;
+    font-size: 8pt;
 }
 
 .about-post {
     font-size: 8pt;
+}
+
+.white {
+    color: #ffffff;
 }
 
 .gray{
@@ -191,7 +219,7 @@ nav li a:active {
 
 .slider-big-article {
     position: relative;
-    width: 60%;
+    width: 55%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -199,7 +227,6 @@ nav li a:active {
 
 .slider-big-article img{
     object-fit: cover;
-    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -234,6 +261,7 @@ nav li a:active {
     flex-direction: column;
     margin: 5px 0px;
     justify-content: space-between;
+    flex-grow: 1;
 }
 
 .slider-side-articles article{
@@ -254,8 +282,8 @@ nav li a:active {
     align-self: center;
     object-fit: cover;
     margin: 0 10px;
-    width: 165px;
-    height: 90px;
+    width: 160px;
+    height: 80px;
     background-image: url("/article-img/img-placeholder-small-slider.png");
 }
 
@@ -368,6 +396,7 @@ nav li a:active {
     flex-basis: 0;
     border-bottom: thin solid #dddddd;
     justify-content: center;
+    padding-bottom: 10px;
 } /*big posts in World News category*/
 
 .world-news .big-post:nth-child(2){
@@ -393,7 +422,8 @@ nav li a:active {
 
 .big-post button{
     display: block;
-    margin: 20px 0;
+    /*margin: 20px 0;*/
+
 }
 
 .big-post button:active{
@@ -459,7 +489,7 @@ nav li a:active {
 
 .fashion .big-post-image {
     object-fit: cover;
-    width: 33%;
+    width: 320px;
     height: 200px;
     margin-right: 30px;
 }
@@ -487,15 +517,19 @@ nav li a:active {
 }
 
 .left-column-blocks{
-    width: 67.5%;
+    width: 86%;
+
 }
 
 /*** LIFESTYLE ***/
 
-.lifestyle {
+.lifestyle, .sports {
     margin-top: 40px;
     padding-right: 20px;
-}
+    border-bottom: thin solid #dddddd;
+    padding-bottom: 20px;
+    min-width: 595px;
+} /*valid for sports section*/
 
 .lifestyle .post-preview-container {
     display: flex;
@@ -505,8 +539,8 @@ nav li a:active {
 
 .lifestyle .post-preview-big{
     position: relative;
-    min-width: 220px;
-    width: 58%;
+    min-width: 320px;
+    width: 320px;
     color: #ffffff;
     flex-grow: 2;
 }
@@ -533,8 +567,8 @@ nav li a:active {
 
 .lifestyle .post-preview-small img{
     object-fit: cover;
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 85px;
     background-image: url('/article-img/img-placeholder-small.png');
     margin: 0 10px;
 }
@@ -597,7 +631,20 @@ aside {
 }
 
 .categories h2, .categories .ad-img{
+    /*margin-left: 30px;*/
+}
+
+.ad-container{
+    width:100%;
     margin-left: 30px;
+}
+
+.ad-img {
+    width: 100%;
+}
+
+.categories img{
+    background-image: url("/article-img/ad-placeholder.png");
 }
 
 .categories-list{
@@ -620,4 +667,192 @@ aside {
 
 .categories-list .right{
     float: right;
+}
+
+/* Sports */
+
+.sports .post-header{
+    min-height: 100%;
+    position: relative;
+    margin-left: 10px;
+}
+
+.sports article{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+
+.sports .post-preview-big {
+    width: 100%;
+    margin-top: 40px;
+}
+
+.sports .post-preview-big img {
+    width: 320px;
+    height: 200px;
+    background-image: url("article-img/img-placeholder-small.png");
+}
+
+.sports .read-more-button{
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+}
+
+.sports .small-post-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.sports .small-post-container img{
+    background-image: url("/article-img/img-placeholder-small.png");
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
+}
+
+.sports .small-post-container .column:nth-child(2){
+    margin-left: 20px;
+}
+
+/*Technology & F/H*/
+
+.technology, .food-n-health{
+    width: 50%;
+    margin-top: 30px;
+}
+
+.technology .post-big-images {
+    margin-top: 20px;
+}
+
+.technology .post-big-images img{
+    width: 320px;
+    height: 180px;
+    background-image: url("article-img/img-placeholder-small.png");
+    margin-bottom: 10px;
+}
+
+
+
+.food-n-health {
+    margin-left: 10px;
+    padding-right: 20px;
+}
+
+.food-n-health article img{
+    background-image: url("/article-img/img-placeholder-small.png");
+    width: 85px;
+    height: 85px;
+    margin-right: 10px;
+}
+
+.food-n-health article{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+
+/******   FOOTER   *******/
+
+
+
+footer .logo-express{
+    color: #ffffff;
+    font-weight: 500;
+}
+
+.clear{
+    clear: both;
+}
+
+footer .footer-content section, footer .column {
+    width: 33.3%;
+}
+
+footer section:nth-child(2){
+    margin: 0 10px;
+}
+
+
+
+footer .social-circles {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+footer .circle-row {
+    display: flex;
+    justify-content: flex-start;
+    margin: 5px -5px;
+    list-style-type: none;
+    padding: 0px;
+}
+
+footer .circle-row .circle {
+    background-color: #ffffff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 0px 5px;
+}
+
+footer .category-head{
+    margin-top: 40px;
+    display: block;
+}
+
+footer .most-viewed article{
+    display: flex;
+    margin: 10px 0 5px 0;
+    padding-bottom: 15px;
+    border-bottom: thin solid #5a5a5a;
+}
+
+footer .most-viewed article:last-child{
+    border: none;
+}
+
+footer .most-viewed article img {
+    object-fit: cover;
+    width: 80px;
+    height: 80px;
+    background-image: url('/article-img/img-placeholder-small.png');
+    margin-right: 10px;
+}
+
+footer hr{
+    border-color: #5a5a5a;
+}
+
+footer .copyright{
+    margin: auto;
+    text-align: center;
+}
+
+/** Scroll up **/
+
+#scroll-to-top {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    background-color: transparent;
+}
+
+#scroll-to-top img{
+    width: 50px;
+    height: 50px;
 }
